--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,13 +52,12 @@ jobs:
           sudo apt-get install -y gcc-aarch64-linux-gnu
 
       - name: Build
-        working-directory: controller-cli
         run: |
           cargo build --release --target ${{ matrix.target }}
 
       - name: Package
         run: |
-          cd controller-cli/target/${{ matrix.target }}/release
+          cd target/${{ matrix.target }}/release
           tar czf ${{ matrix.asset_name }}.tar.gz ${{ matrix.artifact_name }}
           mv ${{ matrix.asset_name }}.tar.gz ${{ github.workspace }}/
 
