--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,8 +21,8 @@ account_sdk = { git = "https://github.com/cartridge-gg/controller-rs", package =
 # CLI framework
 clap = { version = "4.5", features = ["derive", "env"] }
 
-# HTTP client for API queries
-reqwest = { version = "0.12", features = ["json"] }
+# HTTP client for API queries (using rustls for better cross-compilation)
+reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
 
 # HTTP server for callback
 axum = "0.7"
