--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,20 +22,20 @@ jobs:
         include:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-            artifact_name: controller-cli
-            asset_name: controller-cli-x86_64-unknown-linux-gnu
+            artifact_name: controller
+            asset_name: controller-x86_64-unknown-linux-gnu
           - os: ubuntu-latest
             target: aarch64-unknown-linux-gnu
-            artifact_name: controller-cli
-            asset_name: controller-cli-aarch64-unknown-linux-gnu
+            artifact_name: controller
+            asset_name: controller-aarch64-unknown-linux-gnu
           - os: macos-latest
             target: x86_64-apple-darwin
-            artifact_name: controller-cli
-            asset_name: controller-cli-x86_64-apple-darwin
+            artifact_name: controller
+            asset_name: controller-x86_64-apple-darwin
           - os: macos-latest
             target: aarch64-apple-darwin
-            artifact_name: controller-cli
-            asset_name: controller-cli-aarch64-apple-darwin
+            artifact_name: controller
+            asset_name: controller-aarch64-apple-darwin
 
     steps:
       - uses: actions/checkout@v4
